{{$NEXT}}

0.019     2015-11-25 22:45:25 EST
  - Added support for removing all subscribers of a channel at once in unlisten
    method in Mojo::SQLite::PubSub
  - Mojo::SQLite::Migrations now throws an error if the currently active
    version is greater than the latest version
  - Added finish method to Mojo::SQLite::Results

0.018     2015-09-21 13:44:30 EDT
  - Fixes for tests under win32

0.017     2015-09-20 17:24:44 EDT
  - Fix parsing of options from connection strings
  - Allow passing a hashref of options in from_filename

0.016     2015-09-20 16:51:53 EDT
  - Use URI::db to parse connection strings to allow sqlite: connection strings

0.015     2015-09-12 00:13:53 EDT
  - Minor pubsub fixes

0.014     2015-09-11 20:25:25 EDT
  - Add Mojo::SQLite::PubSub and listen/notify implementation in Mojo::SQLite::Database

0.013     2015-09-02 02:44:36 EDT
  - Cache rowid for successful inserts in Results objects as last_insert_id

0.012     2015-08-31 18:26:47 EDT
  - Include better context for DB error messages from $db->query and migrations
  - Switch installer to Module::Build::Tiny

0.011     2015-08-13 20:43:37 EDT
  - Simplify Results refcounting
  - Pass undef instead of broken Results object to callback if statement
    prepare failed

0.010     2015-08-08 22:50:06 EDT
  - Create a tempdir for temporary databases
  - Use immediate locking for migrations instead of exclusive
  - Run query callbacks using next_tick instead of immediately
  - Don't call finish in Results destructor while other Results objects refer
    to the statement handle (GH #2)

0.009     2015-08-05 12:28:48 EDT
  - Simplify some code and examples with Mojo::Base::tap

0.008     2015-08-03 19:23:49 EDT
  - Use and recommend URI to portably parse filenames into URLs
  - Add from_filename method

0.007     2015-08-01 15:17:22 EDT
  - Clarify use of URLs in connection strings

0.006     2015-07-28 23:54:45 EDT
  - Fix results rows() method to return statement handle rows