@@ -68,7 +68,7 @@ EOW
     }
 
 
-    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v5.041.
+    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v5.043.
     use strict;
     use warnings;
 
@@ -84,13 +84,13 @@ EOW
         "Dan Book <dbook\@cpan.org>"
       ],
       "dist_name" => "Mojo-SQLite",
-      "dist_version" => "0.019",
+      "dist_version" => "0.020",
       "license" => "artistic_2",
       "module_name" => "Mojo::SQLite",
       "recursive_test_files" => 1,
       "requires" => {
         "Carp" => 0,
-        "DBD::SQLite" => "1.48",
+        "DBD::SQLite" => "1.50",
         "DBI" => "1.633",
         "File::Spec::Functions" => 0,
         "File::Temp" => 0,
