@@ -1,7 +1,7 @@
 requires 'perl' => '5.010001';
 requires 'Carp';
 requires 'DBI'             => '1.633';
-requires 'DBD::SQLite'     => '1.48';
+requires 'DBD::SQLite'     => '1.50'; # for json support
 requires 'File::Spec::Functions';
 requires 'File::Temp';
 requires 'Mojolicious'     => '6.14';
