@@ -2,6 +2,7 @@ package Mojo::SQLite::Results;
 use Mojo::Base -base;
 
 use Mojo::Collection;
+use Mojo::JSON 'from_json';
 use Mojo::Util 'tablify';
 
 our $VERSION = '0.020';
@@ -20,17 +21,19 @@ sub DESTROY {
   $sth->finish unless --$sth->{private_mojo_refcount};
 }
 
-sub array { (shift->sth->fetchrow_arrayref)[0] }
+sub array { ($_[0]->_expand($_[0]->sth->fetchrow_arrayref))[0] }
 
-sub arrays { _collect(@{shift->sth->fetchall_arrayref}) }
+sub arrays { _collect($_[0]->_expand(@{$_[0]->sth->fetchall_arrayref})) }
 
 sub columns { shift->sth->{NAME} }
 
+sub expand { my $self = shift; ++$self->{expand}{$_} for @_; $self }
+
 sub finish { shift->sth->finish }
 
-sub hash { (shift->sth->fetchrow_hashref)[0] }
+sub hash { ($_[0]->_expand($_[0]->sth->fetchrow_hashref))[0] }
 
-sub hashes { _collect(@{shift->sth->fetchall_arrayref({})}) }
+sub hashes { _collect($_[0]->_expand(@{$_[0]->sth->fetchall_arrayref({})})) }
 
 sub last_insert_id { shift->{last_insert_id} // 0 }
 
@@ -39,6 +42,24 @@ sub rows { shift->sth->rows }
 sub text { tablify shift->arrays }
 
 sub _collect { Mojo::Collection->new(@_) }
+
+sub _expand {
+  my ($self, @data) = @_;
+  
+  return @data unless $data[0] and $self->{expand};
+  
+  for my $data (@data) {
+    if (ref $data eq 'HASH') {
+      $data->{$_} = from_json $data->{$_}
+        for grep { $data->{$_} and $self->{expand}{$_} } keys %$data;
+    } else {
+      $data->[$_] = from_json $data->[$_]
+        for grep { $data->[$_] and $self->{expand}{$self->columns->[$_]} } 0..$#$data;
+    }
+  }
+  
+  return @data;
+}
 
 1;
 
@@ -109,6 +130,16 @@ containing array references.
   my $columns = $results->columns;
 
 Return column names as an array reference.
+
+=head2 expand
+
+  $results = $results->expand('some_json','other_json');
+
+Decode specified fields as JSON text for all rows. The names must exactly match
+the column names as returned by L</"columns">.
+
+  # Expand JSON
+  $results->expand('json_field')->hashes->map(sub { $_->{foo}{bar} })->join("\n")->say;
 
 =head2 finish
 
